Switch CXF to Jersey

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- License Agreement for OpenSearchServer Copyright (C) 2008-2014 Emmanuel 
+<!-- License Agreement for OpenSearchServer Copyright (C) 2008-2017 Emmanuel
 	Keller / Jaeksoft http://www.open-search-server.com This file is part of 
 	OpenSearchServer. OpenSearchServer is free software: you can redistribute 
 	it and/or modify it under the terms of the GNU General Public License as 
@@ -11,9 +11,9 @@
 	a copy of the GNU General Public License along with Jaeksoft OpenSearchServer. 
 	If not, see <http://www.gnu.org/licenses/>. -->
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         id="WebApp_ID" version="2.5">
+         xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         id="WebApp_ID" version="3.0">
     <display-name>${project.name} - ${project.version}</display-name>
     <listener>
         <description>
@@ -232,27 +232,24 @@
         <welcome-file>default.jsp</welcome-file>
         <welcome-file>index.zul</welcome-file>
     </welcome-file-list>
-    <!-- Begin CXF -->
+
     <servlet>
-        <description>Apache CXF</description>
-        <display-name>CXF Servlet</display-name>
-        <servlet-name>CXFServlet</servlet-name>
-        <servlet-class>com.jaeksoft.searchlib.web.ServicesServlet</servlet-class>
+        <servlet-name>Service RestApplication</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
             <param-value>com.jaeksoft.searchlib.webservice.RestApplication</param-value>
         </init-param>
         <init-param>
-            <param-name>jaxrs.providers</param-name>
-            <param-value>org.codehaus.jackson.jaxrs.JacksonJsonProvider</param-value>
+            <param-name>jersey.config.server.provider.scanning.recursive</param-name>
+            <param-value>false</param-value>
         </init-param>
-        <load-on-startup>1</load-on-startup>
     </servlet>
+
     <servlet-mapping>
-        <servlet-name>CXFServlet</servlet-name>
-        <url-pattern>/services/*</url-pattern>
+        <servlet-name>Service RestApplication</servlet-name>
+        <url-pattern>/services/rest/*</url-pattern>
     </servlet-mapping>
-    <!-- End CXF -->
 
     <session-config>
         <session-timeout>60</session-timeout>
