--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,11 @@
                 <version>${slf4j.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jul-to-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>xerces</groupId>
                 <artifactId>xercesImpl</artifactId>
                 <version>2.11.0</version>
@@ -370,12 +375,14 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-catalina</artifactId>
             <version>${tomcat.version}</version>
             <scope>provided</scope>
         </dependency>
+        -->
         <dependency>
             <groupId>net.sourceforge.nekohtml</groupId>
             <artifactId>nekohtml</artifactId>
@@ -877,8 +884,8 @@
         <poi.version>3.14</poi.version>
         <selenium.version>3.4.0</selenium.version>
         <zk.version>6.5.4</zk.version>
-        <jackson.version>2.8.9</jackson.version>
-        <tomcat.version>7.0.79</tomcat.version>
+        <jackson.version>2.9.1</jackson.version>
+        <tomcat.version>7.0.81</tomcat.version>
         <slf4j.version>1.7.25</slf4j.version>
         <jersey.version>2.25.1</jersey.version>
     </properties>
