--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,16 @@
             <name>Ice Maven Release Repository</name>
             <url>http://anonsvn.icesoft.org/repo/maven2/releases</url>
         </repository>
+        <repository>
+            <id>snapshots-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <dependencyManagement>
