--- a/pom.xml
+++ b/pom.xml
@@ -859,6 +859,11 @@
             <version>3.19.3</version>
         </dependency>
         <dependency>
+            <groupId>com.github.zhicwu</groupId>
+            <artifactId>cassandra-jdbc-driver</artifactId>
+            <version>0.6.4</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.jankroken</groupId>
             <artifactId>commandline</artifactId>
             <version>1.7.0</version>
@@ -951,7 +956,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -972,6 +977,7 @@
                                     </excludes>
                                 </filter>
                             </filters>
+                            <!--
                             <artifactSet>
                                 <includes>
                                     <include>org.apache.tomcat.embed:*</include>
@@ -979,9 +985,13 @@
                                     <include>org.apache.commons:commons-lang3</include>
                                     <include>com.github.jankroken:commandline</include>
                                     <include>org.eclipse.jdt.core.compiler:ecj</include>
+                                    <include>com.github.zhicwu:cassandra-jdbc-driver</include>
+                                    <include>com.datastax.cassandra:*</include>
+                                    <include>com.google.guava:guava</include>
                                     <include>log4j:log4j</include>
                                 </includes>
                             </artifactSet>
+                            -->
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
