--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
-                <version>2.8.1</version>
+                <version>2.8.2</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
@@ -92,7 +92,7 @@
             <dependency>
                 <artifactId>commons-codec</artifactId>
                 <groupId>commons-codec</groupId>
-                <version>1.10</version>
+                <version>1.11</version>
             </dependency>
             <dependency>
                 <groupId>commons-collections</groupId>
@@ -107,7 +107,7 @@
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.5</version>
+                <version>2.6</version>
             </dependency>
             <dependency>
                 <groupId>commons-lang</groupId>
@@ -157,12 +157,12 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-compress</artifactId>
-                <version>1.14</version>
+                <version>1.15</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.6</version>
+                <version>3.7</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
@@ -406,7 +406,7 @@
         <dependency>
             <groupId>it.unimi.dsi</groupId>
             <artifactId>fastutil</artifactId>
-            <version>7.2.0</version>
+            <version>8.1.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -415,7 +415,7 @@
         <dependency>
             <groupId>com.ibm.icu</groupId>
             <artifactId>icu4j</artifactId>
-            <version>59.1</version>
+            <version>60.2</version>
         </dependency>
         <dependency>
             <groupId>com.google.api.client</groupId>
@@ -443,7 +443,7 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.10.3</version>
+            <version>1.11.2</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
@@ -504,22 +504,22 @@
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
-            <version>2.0.7</version>
+            <version>2.0.8</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.57</version>
+            <version>1.58</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcmail-jdk15on</artifactId>
-            <version>1.57</version>
+            <version>1.58</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
-            <version>1.57</version>
+            <version>1.58</version>
         </dependency>
         <!-- PDFBox END -->
         <dependency>
@@ -777,17 +777,17 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15</artifactId>
-            <version>1.46</version>
+            <version>1.47</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcmail-jdk15</artifactId>
-            <version>1.46</version>
+            <version>1.47</version>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.7</version>
+            <version>4.7.1</version>
         </dependency>
         <dependency>
             <groupId>net.sf.opencsv</groupId>
@@ -819,7 +819,7 @@
             <artifactId>RoaringBitmap</artifactId>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
+            <groupId>mylil</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.43</version>
         </dependency>
@@ -841,7 +841,7 @@
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
-            <version>10.13.1.1</version>
+            <version>10.14.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.ingres.jdbc</groupId>
@@ -856,7 +856,7 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.19.3</version>
+            <version>3.21.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.qwazr</groupId>
@@ -899,7 +899,7 @@
         <poi.version>3.14</poi.version>
         <selenium.version>3.4.0</selenium.version>
         <zk.version>6.5.4</zk.version>
-        <jackson.version>2.9.1</jackson.version>
+        <jackson.version>2.9.3</jackson.version>
         <tomcat.version>7.0.81</tomcat.version>
         <slf4j.version>1.7.25</slf4j.version>
         <jersey.version>2.25.1</jersey.version>
