--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <qwazr.version>1.4.0-SNAPSHOT</qwazr.version>
-        <log4j.version>2.10.0</log4j.version>
+        <log4j.version>2.11.0</log4j.version>
     </properties>
 
     <dependencyManagement>
@@ -243,6 +243,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <shadedClassifierName>app</shadedClassifierName>
                             <keepDependenciesWithProvidedScope>true</keepDependenciesWithProvidedScope>
                             <filters>
                                 <filter>
