Shade as second artifact

--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
                             <shadedClassifierName>app</shadedClassifierName>
                             <keepDependenciesWithProvidedScope>true</keepDependenciesWithProvidedScope>
                             <filters>
