--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,16 @@
                 <version>1.3.1</version>
             </dependency>
             <dependency>
+                <groupId>org.webjars.bower</groupId>
+                <artifactId>highlightjs</artifactId>
+                <version>9.12.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars.npm</groupId>
+                <artifactId>clipboard</artifactId>
+                <version>2.0.0</version>
+            </dependency>
+            <dependency>
                 <groupId>org.xerial.snappy</groupId>
                 <artifactId>snappy-java</artifactId>
                 <version>1.1.7.1</version>
@@ -233,6 +243,14 @@
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>ace-builds</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>highlightjs</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>clipboard</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
