Split search page in to templates (form and result)

--- a/pom.xml
+++ b/pom.xml
@@ -77,17 +77,17 @@
             <dependency>
                 <groupId>org.webjars</groupId>
                 <artifactId>bootstrap</artifactId>
-                <version>4.0.0</version>
+                <version>4.1.0</version>
             </dependency>
             <dependency>
                 <groupId>org.webjars</groupId>
                 <artifactId>jquery</artifactId>
-                <version>3.2.1</version>
+                <version>3.3.1</version>
             </dependency>
             <dependency>
-                <groupId>org.webjars.npm</groupId>
+                <groupId>org.webjars</groupId>
                 <artifactId>popper.js</artifactId>
-                <version>1.12.9</version>
+                <version>1.14.1</version>
             </dependency>
             <dependency>
                 <groupId>org.webjars.bower</groupId>
