--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <qwazr.version>1.4.0-SNAPSHOT</qwazr.version>
+        <qwazr.version>1.4.1-SNAPSHOT</qwazr.version>
         <log4j.version>2.11.0</log4j.version>
     </properties>
 
@@ -77,12 +77,12 @@
             <dependency>
                 <groupId>org.webjars</groupId>
                 <artifactId>bootstrap</artifactId>
-                <version>4.1.0</version>
+                <version>4.1.1</version>
             </dependency>
             <dependency>
                 <groupId>org.webjars</groupId>
                 <artifactId>jquery</artifactId>
-                <version>3.3.1</version>
+                <version>3.3.1-1</version>
             </dependency>
             <dependency>
                 <groupId>org.webjars</groupId>
@@ -97,7 +97,7 @@
             <dependency>
                 <groupId>org.webjars.npm</groupId>
                 <artifactId>ace-builds</artifactId>
-                <version>1.3.1</version>
+                <version>1.3.3</version>
             </dependency>
             <dependency>
                 <groupId>org.webjars.bower</groupId>
@@ -110,9 +110,9 @@
                 <version>2.0.0</version>
             </dependency>
             <dependency>
-                <groupId>org.xerial.snappy</groupId>
-                <artifactId>snappy-java</artifactId>
-                <version>1.1.7.1</version>
+                <groupId>org.jboss.logging</groupId>
+                <artifactId>jboss-logging</artifactId>
+                <version>3.2.1.Final</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
