--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,15 @@
 language: java
 jdk:
   - oraclejdk8
-install: mvn install -DskipTests=true -Dgpg.skip=true -Dmaven.javadoc.skip=true -B -V
+  - oraclejdk9
+  - oraclejdk10
+cache:
+  directories:
+  - .autoconf
+  - $HOME/.m2
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+      - oracle-java9-installer
+install: mvn install -DskipTests=true -Dgpg.skip=true -Dmaven.javadoc.skip=true -B -V -U
