--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,16 @@
                 <artifactId>jboss-logging</artifactId>
                 <version>3.2.1.Final</version>
             </dependency>
+            <dependency>
+                <artifactId>pdfbox</artifactId>
+                <groupId>org.apache.pdfbox</groupId>
+                <version>2.0.11</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>4.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
