Integrate react skeleton

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,15 @@
-# EditorConfig: http://editorconfig.org/
-
 root = true
 
-[*.java]
-charset = utf-8
+[*]
 indent_style = space
-indent_size = 4
+indent_size = 2
+charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.{md, adoc, asciidocs}]
+trim_trailing_whitespace = false
+
+[*.java]
+indent_size = 4
+max_line_length = 120
