--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,11 @@
       <artifactId>react</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.webjars.bower</groupId>
+      <artifactId>babel-standalone</artifactId>
+      <version>6.14.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>swagger-ui</artifactId>
       <version>3.25.0</version>
