--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,7 @@
 language: java
 jdk:
-  - oraclejdk8
-  - oraclejdk9
-  - oraclejdk10
+  - openjdk11
 cache:
   directories:
-  - .autoconf
-  - $HOME/.m2
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
-      - oracle-java9-installer
+    - $HOME/.m2
 install: mvn install -DskipTests=true -Dgpg.skip=true -Dmaven.javadoc.skip=true -B -V -U
