--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,9 @@
 /store
 /table
 /tmp
-/node_modules
-/package-lock.json
+node_modules
+package-lock.json
+yarn.lock
 /server
 config.oss2.properties
 opensearchserver.iml
