--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ node_modules
 package-lock.json
 yarn.lock
 /server
+/front/build
 config.oss2.properties
 opensearchserver.iml
 dependency-reduced-pom.xml
