--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "bootstrap": "^4.5.3",
+    "graphiql": "^1.2.0",
+    "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
