Improve GH action

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,13 +3,8 @@
 
 name: Java CI with Maven
 
-on:
-  workflow_dispatch:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+on: [workflow_dispatch, push, pull_request]
+     
 jobs:
   build:
 
